<resources>
    <string name="app_name">Bigha</string>
    <string name="Dev">Dev Gurus</string>
    <string name="from">From</string>
    <string name="name">Name</string>
    <string name="Welcome">WELCOME</string>
    <string name="Enter_info">Please Enter Your Information"</string>
    <string name="Mobile_NO">Mobile No.</string>
    <string name="Create_pass">Create  Password</string>
    <string name="Reenter_Pass">Re-Enter Password</string>
    <string name="Remember_me">Remember Me</string>
    <string name="Register_me">REGISTER ME</string>
    <string name="Bigha">BIGHA</string>
    <string name="Login_with_info">Please login with your information</string>
    <string name="Email">Email Address</string>
    <string name="Password">Password</string>
    <string name="Remember_Me">Remember Me</string>
    <string name="Forgot_pass">Forgot Password</string>
    <string name="Login">LOGIN</string>
    <string name="Your_Name">Your Name</string>
    <string name="Register_Now">OR REGISTER NOW</string>
    <string name="MicroFinanceTxt"></string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Rental_plat">Rental Platform</string>
    <string name="Your_Rentals">YOUR RENTALS</string>
    <string name="microfinances">MicroFinances</string>
    <string name="go_to_micro_finances">Go to Micro Finances</string>
    <string name="know_more">Know More</string>
    <string name="rent_equipments">Rent Equipments</string>
    <string name="modernizing_farm_equipment_access">Modernizing Farm Equipment Access</string>
    <string name="find_tools_nearby">Find Tools Nearby</string>
    <string name="disease_detection">Disease Detection</string>
    <string name="get_diagnosis_and_cure">Get Diagnosis and cure</string>
    <string name="detect_diseases">Detect Diseases</string>
    <string name="outbreaks_nearby">Outbreaks Nearby</string>
    <string name="agrotourism">AgroTourism</string>
    <string name="diversify_your_income">Diversify your income</string>
    <string name="agro_tourism_profile">Find Agro Tourism</string>
    <string name="filter">Filter</string>
    <string name="nearby_machinery">Nearby Machinery</string>
    <string name="nearby_livestock">Nearby LiveStock</string>
    <string name="a_z_a_z_0_9">a-z/A-Z/0-9</string>
    <string name="same_as_above">Same as above</string>
    <string name="your_name_eg_parth">YOUR NAME (Eg:- Parth)</string>
    <string name="your_mob_no">YOUR MOB NO.</string>
    <string name="search">Search.....</string>
    <string name="back">Back</string>

    <!--NEW TEXTS addforrent.xml=13-->
    <string name="add_for_rent">Add For Rent</string>
    <string name="tool_information">Tool Information</string>
    <string name="image_of_product">Image of Product</string>
    <string name="select_image">Select Image</string>
    <string name="tool_name">Tool Name</string>
    <string name="enter_your_tool_name">Enter your Tool name</string>
    <string name="description">Description</string>
    <string name="quality_modal_age_condition">Quality/Model/Age/Condition</string>
    <string name="pricing">Pricing</string>
    <string name="rate_per_day_hour">Rate Per Day/Hour</string>
    <string name="location">Location</string>
    <string name="enter_your_location">Enter your Location</string>
    <string name="submit">Submit</string>

    <!--agrotourism.xml-->

    <string name="agro_tourism">Agro Tourism</string>
    <string name="your_customers">Your Customers</string>
    <string name="nearby_tourist_spots">Nearby Tourist Spots</string>
    <string name="destination_details">Destination Details</string>

    <!--rent.xml-->
    <string name="machinery_description">Machinery Description</string>
    <string name="multiline_description">Multiline description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>