<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".signUpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.6"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/card_view"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bigha"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="60sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-28dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Welcome"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Login_with_info"
                android:alpha="0.7"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mobile_NO"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="707812XXXX" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:alpha="0.7"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/passEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="a-z/A-Z/0-9"
                android:drawableEnd="@drawable/password_eye"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Remember_me"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Forgot_pass"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/submitlogin"
                android:text="@string/Login"

                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register_Now"
                android:layout_gravity="center"
                android:textColor="@color/my_secondary"
                android:textStyle="bold"
                android:onClick="onRegisterNowClicked"
                android:alpha="0.7"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>