<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".regActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/baseline_arrow_back_24"
        android:clickable="true"
        android:onClick="previous"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/card_view"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Welcome"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="40sp"
            android:textColor="@color/my_primary"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-28dp"
        android:id="@+id/card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Enter_info"
                android:alpha="0.7"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="ex-'parth'"
                android:inputType="textPersonName"
                 />


            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mobile_NO"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/MobileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="707812XXXX"
                android:inputType="text|phone" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Create_pass"
                android:alpha="0.7"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/passs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="a-z/A-Z/0-9"
                android:drawableEnd="@drawable/password_eye"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Reenter_Pass"
                android:alpha="0.7"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Same as above"
                android:drawableEnd="@drawable/password_eye"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Remember_me"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/submitsignup"
                android:text="@string/Register_me"

                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>